# esp32-eth-wifista-softap

./: CMakeLists.txt  README.MD  Untitled Sketch.fzz  sdkconfig  sdkconfig.old
components/ethernet_init/: Kconfig.projbuild  ethernet_init.c  ethernet_init.h
components/wifi_init/: CMakeLists.txt  Kconfig.projbuild  wifi_init.c  wifi_init.h
data/frontend/: admin.html  index.html  styles.css
main/: CMakeLists.txt  main.c
main/inc/: api_thread.h  common_rtc.h  ds1307_interface.h  ds3231_interface.h  ethernet_interface.h  server_setup.h  system_config.h  utils.h  wifi_interface.h
main/src/: api_thread.c  common_rtc.c  ds1307_interface.c  ds3231_interface.c  ethernet_interface.c  server_setup.c  system_config.c  utils.c  wifi_interface.c
